# sx126x_driver

./: CMakeLists.txt
hal/: CMakeLists.txt
hal/pico/: CMakeLists.txt  sx126x_hal_pico.c  sx126x_hal_pico.h
